# max-allowed-current

./: .gitmodules  CMakeLists.txt  README.md  SoftwareRequirementSpecification.md  capacitor_tank.cpp  capacitor_tank.h  capacitor_violation_check.cpp  capacitor_violation_check.h  capacitors-spec.json  capacitors.cpp  capacitors.h  how-to-run.sh  main.cpp  test_capacitor_tank.cpp  tests.cpp
.devcontainer/: devcontainer.json
include/: CapacitorInterface.h  MemoryMngr.h  capacitor_dump_value.h  capacitor_tank.h  capacitor_violation_check.h  capacitors.h
src/: MemoryMngr.cpp  capacitor_dump_value.cpp  capacitor_tank.cpp  capacitor_violation_check.cpp  capacitors.cpp
tests/: test_capacitor_tank.cpp  test_pool.cpp  test_static.cpp  tests.cpp
